--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "helmet": "^7.1.2",
+    "express-rate-limit": "^6.8.0"
   },
   "scripts": {
     "terminal": "node -r dotenv/config -r ts-node/register/transpile-only src/off_boarding_terminal.ts",
